@@ -19,13 +19,13 @@ DIST groff-1.21.tar.gz 3863837 RMD160 d050f886291a53ea46875887e5641e510e1aecf6 S
 EBUILD groff-1.20.1-r1.ebuild 2494 RMD160 f55c9abc2d4c49b3edaa085b99f74b8375078141 SHA1 46bcfd3b2ac7c7c8944fb3390d0a32343a2de963 SHA256 662c469d03a869d667b9ac641c2c8a7bd6403d4cba649d29d7342e7f88c4f28f
 EBUILD groff-1.20.1-r2.ebuild 2515 RMD160 c8aa7b4ecbb1d5ea572e54e20b6ef7d65a71cd03 SHA1 5096111b89991ed3e84d2af871d07e0edceab8e9 SHA256 4958abc71d6bf551c496192f558ecafd8fe062a7917f26d17b29e14c39872474
 EBUILD groff-1.20.1-r3.ebuild 2949 RMD160 8c384d0f08915a34e70ecb50ce7af9b9664bfd86 SHA1 e566f36553999d87e121387d9aac684bb8944c4c SHA256 e2cd7a5cdb1736f717d68262d155128f2616717adf022efcfbca07f8de066c79
-EBUILD groff-1.21.ebuild 2446 RMD160 20bd441fc3e567f24bc719686e39ed69981df67b SHA1 79e57e2026f498c8e530dd7f13e3ea3d213a5426 SHA256 8489da391940cdaf963ac8ef9430edd615d83496a231596bd274928955f28963
-MISC ChangeLog 16349 RMD160 c0976748588073a7a0516901a3bbdc9c925111ab SHA1 d7c363e1ad4de2066d6c42700495b8cf0138387d SHA256 13c2385029fa69566bfad622f3988e13804a4c8f80a50c9facbc97d74a99037c
+EBUILD groff-1.21.ebuild 2576 RMD160 e05ec2e5a46c9db494e46fbf94bfc66c85738b24 SHA1 1f385644c4245bf0f7fc092357ad33a37f87ac84 SHA256 e43d6a37b67d129594a9e462bf1a6ac85258a182f2d233d011f892a21edeeffb
+MISC ChangeLog 16506 RMD160 4b42fa3a9a95288468769d2421037cb55e3a4c00 SHA1 82cfe007050076f613d8f21c9b948b16bdcf0c84 SHA256 200a7ee5ede6cd6899009efcd15fc07fbd5e30e94e9bc20dbda9ccaf1bdebbf4
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk6i+vsACgkQX3X2B8XHTonwjQCcCUB3tUYcGCz4oNgQn1ycsccV
-6H4AmgLLeem7SONwnOjXSXiD8W00/G0l
-=F10C
+iEYEARECAAYFAk6j13IACgkQX3X2B8XHTolr5gCfYn6wRcMQyb1vYt3LlB/Rw6/S
+17oAnjMEsY7Gj3Boyc4A+xorfYuHeObC
+=5Igs
 -----END PGP SIGNATURE-----
