@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/groff/ChangeLog,v 1.120 2011/05/07 18:02:54 armin76 Exp $
 
+  23 Oct 2011; Fabian Groffen <grobian@gentoo.org> groff-1.21.ebuild:
+  Identify as Gentoo Prefix, and simplify no-g-nameprefix patch to a sed
+  statement.
+
   07 May 2011; Raúl Porcel <armin76@gentoo.org> groff-1.21.ebuild:
   alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #362561
 
